--- a/ShipBobApp/Views/Shared/_Layout.cshtml
+++ b/ShipBobApp/Views/Shared/_Layout.cshtml
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ShipBobApp</title>
 
+
+
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
@@ -30,10 +32,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     
+                    
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Install">Install Notes</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="UseCase">Use Case Notes</a></li>
+
+
+
                     <li><a asp-area="" asp-controller="Users" asp-action="Index">User Dashboard</a></li>
                     <li><a asp-area="" asp-controller="Orders" asp-action="Index">Order Dashboard</a></li>
                 </ul>
