--- a/ShipBobApp/Views/Users/Index.cshtml
+++ b/ShipBobApp/Views/Users/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ShipBobApp.Models.User>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "User Dashboard";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
