Created API for both tables

--- a/ShipBobApp/Views/Users/Index.cshtml
+++ b/ShipBobApp/Views/Users/Index.cshtml
@@ -7,36 +7,75 @@
 
 <h2>Index</h2>
 
+
+<h2>Testing</h2>
+
+
+<div ng-app="myApp" ng-controller="customersCtrl">
+    <p><input type="text" ng-model="test"></p>
+   
+    <table>
+        <tr ng-repeat="x in names | filter:test">
+            <td>{{ x.fullName }}</td>
+          
+        </tr>
+    </table>
+
+</div>
+
+<script>
+    var app = angular.module('myApp', []);
+    app.controller('customersCtrl', function($scope, $http) {
+        $http.get("localhost:7777/api/users1api/users1")
+            .then(function (response) {$scope.names = response.data;});
+    });
+</script>
+
+<p>The list will only consists of names matching the filter.</p>
+
+
+<hr />
+
 <p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.FirstName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.LastName)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LastName)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.UserId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.UserId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+           
+            <tr>
+                <td id="fname">
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.UserId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.UserId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.UserId">Delete</a>
+                </td>
+                
+                <script>
+
+
+                    var customer = getElementById(fname);
+                
+
+                </script>
+            </tr>
+        }
     </tbody>
 </table>
