Added search filter on orders page!

--- a/ShipBobApp/Views/Home/Testing.cshtml
+++ b/ShipBobApp/Views/Home/Testing.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Testing</h2>
+@*<h2>Testing</h2>
 
 
 <p>The list will only consists of names matching the filter.</p>
@@ -28,7 +28,7 @@
                 $log.info(response);
             });
     });
-</script>
+</script>*@
 
 <hr />
 
