--- a/ShipBobApp/Views/Home/Testing.cshtml
+++ b/ShipBobApp/Views/Home/Testing.cshtml
@@ -2,18 +2,20 @@
     ViewData["Title"] = "Testing";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-@*<h2>Testing</h2>
+ 
+    <h2>Testing</h2>
 
 
 <p>The list will only consists of names matching the filter.</p>
 
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+
+
 <div ng-app="myApp" ng-controller="customersCtrl"> 
 
     <table>
-        <tr ng-repeat="x in names">
-            <td>{{ x }}</td>
-            <td>{{ x }}</td>
+        <tr ng-repeat="customer in customers">
+            <td>{{ customer.fullName }}</td>
         </tr>
     </table>
 
@@ -22,13 +24,11 @@
 <script>
     var app = angular.module('myApp', []);
     app.controller('customersCtrl', function($scope, $http, $log) {
-        $http.get("localhost:7777/api/users1")
+        $http.get("/api/usersapi")
             .then(function(response) {
-                $scope.names = response.data;
-                $log.info(response);
+                $scope.customers = response.data;
             });
     });
-</script>*@
-
+</script>
 <hr />
 
