Last commit - Added angular filter to the search bar - table created dynamically (api)

--- a/ShipBobApp/Views/Home/Install.cshtml
+++ b/ShipBobApp/Views/Home/Install.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Install</h2>
+<h2>Install Notes / Say Hi?</h2>
+
+
+<a href="https://github.com/strum07/ShipBobApp.git">Github</a>
+<br/>
+<a href="https://www.linkedin.com/in/sagarsudhakar/">LinkedIn</a>
+
 
