--- a/ShipBobApp/Views/Users/Index.cshtml
+++ b/ShipBobApp/Views/Users/Index.cshtml
@@ -15,7 +15,7 @@
     });
 </script>
 
-<p>The list will only consists of names matching the filter.</p>
+<p>The list will only consists of names matching the filter. Has no Angular - Works on Data Model mapped by EF</p>
 
 
 
