--- a/ShipBobApp/Views/Home/Testing.cshtml
+++ b/ShipBobApp/Views/Home/Testing.cshtml
@@ -1,34 +1,76 @@
-﻿@{
-    ViewData["Title"] = "Testing";
+﻿@model IEnumerable<ShipBobApp.Models.Order>
+
+@{
+    ViewData["Title"] = "Angular - Dash";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
- 
-    <h2>Testing</h2>
+
+<h2>Customer Dash - Angular</h2>
+<p>This list makes use of an Angular controller which gets JSON from a HTTP request to the Database.</p>
+<p>User API route: <strong>/api/usersapi</strong> </p>
+<p>Orders API route: <strong>/api/ordersapi</strong> </p>
 
 
-<p>The list will only consists of names matching the filter.</p>
-
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+<p>This list will only consists of names matching the filter below.</p>
 
 
-<div ng-app="myApp" ng-controller="customersCtrl"> 
+<hr />
 
-    <table>
-        <tr ng-repeat="customer in customers">
-            <td>{{ customer.fullName }}</td>
+<div ng-app="myApp" ng-controller="customersCtrl">
+
+    <input type="text" class="form-control" ng-model="searchKeyword" />
+    <hr />
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+
+        <tr ng-repeat="customer in customers | filter: searchKeyword">
+            <td>{{ customer.firstName }}</td>
+            <td>{{ customer.lastName }}</td>
+            <td>
+                <a href="/Users/Edit/{{customer.userId}}">Edit</a> |
+                <a href="/Users/Details/{{customer.userId}}">Details</a> |
+                <a href="/Users/Delete/{{customer.userId}}">Delete</a>
+            </td>
         </tr>
     </table>
 
 </div>
 
+
+
 <script>
     var app = angular.module('myApp', []);
-    app.controller('customersCtrl', function($scope, $http, $log) {
+    app.controller('customersCtrl', function ($scope, $http, $q) {
         $http.get("/api/usersapi")
-            .then(function(response) {
+            .then(function (response) {
                 $scope.customers = response.data;
+
             });
     });
 </script>
+
+
+//something to improve and work on//
+<script>
+    function getCount(userId, obj) {
+        var count = 0;
+        for (var i = 0; i < obj.length; i++) {
+            if (obj.users[i].userId === userId) {
+                count++;
+            }
+        }
+        return count;
+    }
+</script>
+
+
+
 <hr />
 
