Cleaned up some stray code and added  custom form validations

--- a/ShipBobApp/Views/Shared/_Layout.cshtml
+++ b/ShipBobApp/Views/Shared/_Layout.cshtml
@@ -36,8 +36,8 @@
                     
                 <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                 <li><a asp-area="" asp-controller="Home" asp-action="Install">Install Notes</a></li>
-                <li><a asp-area="" asp-controller="Home" asp-action="Testing">User Dash - Angular</a></li>
-                <li><a asp-area="" asp-controller="Users" asp-action="Index">User Dashboard</a></li>
+                <li><a asp-area="" asp-controller="Home" asp-action="AngularDash">User Dash - Angular</a></li>
+                <li><a asp-area="" asp-controller="Users" asp-action="Index">User Dashboard</span></a></li>
                 <li><a asp-area="" asp-controller="Orders" asp-action="Index">Order Dashboard</a></li>
             </ul>
         </div>
@@ -47,7 +47,7 @@
     @RenderBody()
     <hr/>
     <footer>
-        <p>&copy; 2017 - ShipBobApp</p>
+        <p>&copy; 2017 - DemoApp</p>
     </footer>
 </div>
 
