--- a/ShipBobApp/Views/Users/Delete.cshtml
+++ b/ShipBobApp/Views/Users/Delete.cshtml
@@ -8,18 +8,19 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
+<hr/>
+
+
 <div>
-    <h4>User</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
+            First Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LastName)
+           Last Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.LastName)
@@ -28,7 +29,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="UserId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
