--- a/ShipBobApp/Views/Users/Details.cshtml
+++ b/ShipBobApp/Views/Users/Details.cshtml
@@ -5,20 +5,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+
+<h2>User Details</h2>
+<hr />
 
 <div>
-    <h4>User</h4>
-    <hr />
+ 
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
+           First Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LastName)
+           Last Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.LastName)
