--- a/ShipBobApp/Views/Users/Index.cshtml
+++ b/ShipBobApp/Views/Users/Index.cshtml
@@ -5,56 +5,53 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>User Dashboard</h2>
+<p>The list will only consists of names matching the filter. Has no Angular - Works on Data Model mapped by EF and the search string query</p>
+<p> URL format: <strong> /Users?SearchString=</strong></p>
+<p>Search string can consist of any part of the name : First/Last </p>
 
-<script>
-    var app = angular.module('myApp', []);
-    app.controller('customersCtrl', function($scope, $http) {
-        $http.get("localhost:7777/api/users1api/users1")
-            .then(function (response) {$scope.names = response.data;});
-    });
-</script>
-
-<p>The list will only consists of names matching the filter. Has no Angular - Works on Data Model mapped by EF</p>
+<hr/>
 
 
 
+<div class="well">
+    
 
-
-
-<form asp-action="Index" method="get">
-    <div class="form-actions no-color">
-        <p>
-            Find by name: <input type="text" name="SearchString" value="@ViewData["currentFilter"]" />
+    <form asp-action="Index" method="get">
+        <div class="form-action no-color">
+            <p>
+                <input type="text" name="SearchString" value="@ViewData["currentFilter"]" class="form-control" placeholder="Search for Users..." />
+                <br/>
+                <input type="submit" value="Search" class="btn btn-default btn-primary" /> |
+                <a asp-action="Index">Back to Full List</a>
             
-            <input type="submit" value="Search" class="btn btn-default" /> |
-            <a asp-action="Index">Back to Full List</a>
-            
-        </p>
-    </div>
-</form>
+            </p>
+        </div>
+    </form>
 
 
 
 
-<hr />
+    <hr />
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+    <p>
+        <a asp-action="Create">Create New User</a>
+    </p>
+    <table class="table">
+        <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                First Name
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+               Last Name
             </th>
-            <th></th>
+            <th>
+                Actions
+            </th>
         </tr>
-    </thead>
-    <tbody>
+        </thead>
+        <tbody>
         @foreach (var item in Model)
         {
            
@@ -80,5 +77,7 @@
                 </script>
             </tr>
         }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+</div>
+
