--- a/ShipBobApp/Views/Orders/Delete.cshtml
+++ b/ShipBobApp/Views/Orders/Delete.cshtml
@@ -5,33 +5,33 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Delete Order</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this Order?</h3>
+<hr />
+
 <div>
-    <h4>Order</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.TrackingId)
+            Tracking ID
         </dt>
         <dd>
             @Html.DisplayFor(model => model.TrackingId)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.RecipientName)
+            Recipient Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.RecipientName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.StreetAddress)
+            Street Address
         </dt>
         <dd>
             @Html.DisplayFor(model => model.StreetAddress)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.City)
+            City
         </dt>
         <dd>
             @Html.DisplayFor(model => model.City)
@@ -40,16 +40,16 @@
             @Html.DisplayNameFor(model => model.State)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.State)
+           State
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ZipCode)
+            ZipCode
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Customer)
+            Customer
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Customer.FullName)
@@ -58,7 +58,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="OrderId" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
