--- a/ShipBobApp/Views/Orders/Details.cshtml
+++ b/ShipBobApp/Views/Orders/Details.cshtml
@@ -5,50 +5,49 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Order Details</h2>
+<hr />
 
 <div>
-    <h4>Order</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.TrackingId)
+            Tracking ID
         </dt>
         <dd>
             @Html.DisplayFor(model => model.TrackingId)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.RecipientName)
+            Recipient Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.RecipientName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.StreetAddress)
+            Street Address
         </dt>
         <dd>
             @Html.DisplayFor(model => model.StreetAddress)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.City)
+           City
         </dt>
         <dd>
             @Html.DisplayFor(model => model.City)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.State)
+           State
         </dt>
         <dd>
             @Html.DisplayFor(model => model.State)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ZipCode)
+            ZipCode
         </dt>
         <dd>
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Customer)
+            Customer Name
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Customer.FullName)
