--- a/ShipBobApp/Views/Orders/Edit.cshtml
+++ b/ShipBobApp/Views/Orders/Edit.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-
-<h4>Order</h4>
+<h2>Edit Order Details</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,42 +13,42 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="OrderId" />
             <div class="form-group">
-                <label asp-for="TrackingId" class="control-label"></label>
+                <label asp-for="TrackingId" class="control-label"> Tracking ID</label>
                 <input asp-for="TrackingId" class="form-control" />
                 <span asp-validation-for="TrackingId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RecipientName" class="control-label"></label>
+                <label asp-for="RecipientName" class="control-label">Recipient Name</label>
                 <input asp-for="RecipientName" class="form-control" />
                 <span asp-validation-for="RecipientName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StreetAddress" class="control-label"></label>
+                <label asp-for="StreetAddress" class="control-label">Street Address</label>
                 <input asp-for="StreetAddress" class="form-control" />
                 <span asp-validation-for="StreetAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="City" class="control-label"></label>
+                <label asp-for="City" class="control-label">City</label>
                 <input asp-for="City" class="form-control" />
                 <span asp-validation-for="City" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="State" class="control-label"></label>
+                <label asp-for="State" class="control-label">State</label>
                 <input asp-for="State" class="form-control" />
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ZipCode" class="control-label"></label>
+                <label asp-for="ZipCode" class="control-label">Zipcode</label>
                 <input asp-for="ZipCode" class="form-control" />
                 <span asp-validation-for="ZipCode" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
+                <label asp-for="UserId" class="control-label">Customer</label>
                 <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
                 <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-success" />
             </div>
         </form>
     </div>
