--- a/ShipBobApp/Views/Orders/Index.cshtml
+++ b/ShipBobApp/Views/Orders/Index.cshtml
@@ -5,82 +5,103 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Order Dashboard</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-
-<form asp-action="Index" method="get">
-    <div class="form-actions no-color">
-        <p>
-            Find by Customer or Recipient Name: <input type="text" name="SearchString" value="@ViewData["currentFilter"]" />
-            <input type="submit" value="Search" class="btn btn-default" /> |
-            <a asp-action="Index">Back to Full List</a>
-        </p>
-    </div>
-</form>
+<p>This list is similar to the User Dashboard. Works on Data Model mapped by EF and the search string query.</p>
+<p>However, you can add orders only to existing customers/users - as defined in the use case</p>
+<p> URL format: <strong> /Orders?SearchString=</strong></p>
+<p>Search string can consist of any part of the name : Recipient / Customer </p>
+<hr/>
 
 
 
+<div class="well">
 
-<table class="table">
-    <thead>
-        <tr>
+   
+
+    <form asp-action="Index" method="get">
+        <div class="form-actions no-color">
+            <p>
+                <input type="text" name="SearchString" value="@ViewData["currentFilter"]" class="form-control" placeholder="Search for Orders : Recipient or Customer Name"  />
+                <br/>
+                <input type="submit" value="Search" class="btn btn-primary" /> |
+                <a asp-action="Index">Back to Full List</a>
+            </p>
+        </div>
+    </form>
+    <hr />
+    
+    <p>
+        <a asp-action="Create">Create New Order</a>
+    </p>
+
+
+
+
+    <table class="table">
+        <thead>
+            <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.TrackingId)
+                    Trackind ID
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.RecipientName)
+                    Recipient Name
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.StreetAddress)
+                    Customer Name
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.City)
+                   Street Address
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.State)
+                    City
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.ZipCode)
+                    State
                 </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Customer)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TrackingId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RecipientName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.StreetAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.State)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZipCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Customer.FullName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+                <th>
+                    Zipcode
+                </th>
+                <th>
+                    Actions
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TrackingId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RecipientName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Customer.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.StreetAddress)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.City)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.State)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ZipCode)
+                    </td>
+                
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
+                        <a asp-action="Details" asp-route-id="@item.OrderId">Details</a> |
+                        <a asp-action="Delete" asp-route-id="@item.OrderId">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
