--- a/ShipBobApp/Views/Users/Delete.cshtml
+++ b/ShipBobApp/Views/Users/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Delete User</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this user?</h3>
 <hr/>
 
 
