Last commit - Before Identity Integration

--- a/ShipBobApp/Views/Home/Install.cshtml
+++ b/ShipBobApp/Views/Home/Install.cshtml
@@ -10,3 +10,17 @@
 <a href="https://github.com/strum07/ShipBobApp.git">Github</a>
 <br/>
 <a href="https://www.linkedin.com/in/sagarsudhakar/">LinkedIn</a>
+
+
+<br/>
+
+<a href="http://students.cs.niu.edu/~z1783546/Payroll/">Payroll System Demo</a>
+<p>This assignment is similar to a database coursework assignment in the summer of 2017.</p>
+<p>Tech Used for the Payroll Demo</p>
+<ul>
+    <li>PHP</li>
+    <li>MySQL</li>
+    <li>HTML/CSS/JS : https://purecss.io/ </li>
+    <li>Blitz Server on Campus</li>
+    <li>PhpStorm</li>
+</ul>
